src/test/ui/E0594.ast.stderr
error[E0594]: cannot assign to immutable static item
  --> $DIR/E0594.rs:17:5
   |
LL |     NUM = 20; //[ast]~ ERROR E0594
   |     ^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0594`.
